[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fontes/COUR.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Sistema/Buttons_Action.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Sistema/Dropdowns/DropdownFisios.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="Background" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BarraSuperior" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 108.0
color = Color( 0, 0.2, 0.6, 1 )

[node name="Label" type="Label" parent="BarraSuperior"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Login Fisioterapeuta"
align = 1
valign = 1

[node name="DropdownFisios" type="OptionButton" parent="."]
margin_left = 480.0
margin_top = 440.0
margin_right = 1440.0
margin_bottom = 575.0
script = ExtResource( 3 )

[node name="novo_Registro_F" type="Button" parent="."]
margin_left = 480.0
margin_top = 880.0
margin_right = 780.0
margin_bottom = 950.0
custom_fonts/font = SubResource( 4 )
text = "Registrar"

[node name="Entrar_F" type="Button" parent="."]
margin_left = 1536.0
margin_top = 880.0
margin_right = 1836.0
margin_bottom = 950.0
custom_fonts/font = SubResource( 4 )
text = "Entrar"
script = ExtResource( 2 )

[connection signal="pressed" from="novo_Registro_F" to="Entrar_F" method="_on_novo_Registro_F_pressed"]
[connection signal="pressed" from="Entrar_F" to="Entrar_F" method="_on_Entrar_F_pressed"]
