[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fontes/Fontes_Formatadas/Botoes.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Sistema/Buttons_Action.gd" type="Script" id=2]
[ext_resource path="res://Fontes/Fontes_Formatadas/BarraSuperior.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fontes/Fontes_Formatadas/insideDropdownAndLineEdit.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fontes/Arial/arial.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fontes/Arial/ariali.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BarraSuperior" type="ColorRect" parent="Background"]
anchor_right = 1.0
margin_bottom = 158.0
color = Color( 0, 0.2, 0.6, 1 )

[node name="Label" type="Label" parent="Background/BarraSuperior"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Registrar Fisioterapeuta"
align = 1
valign = 1

[node name="Email" type="LineEdit" parent="Background"]
margin_left = 480.0
margin_top = 315.0
margin_right = 1440.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 4 )

[node name="email" type="Label" parent="Background/Email"]
margin_top = -60.0
margin_right = 120.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "E-mail"

[node name="Senha" type="LineEdit" parent="Background"]
margin_left = 486.0
margin_top = 585.0
margin_right = 1446.0
margin_bottom = 720.0
custom_fonts/font = ExtResource( 4 )

[node name="senha" type="Label" parent="Background/Senha"]
margin_top = -60.0
margin_right = 120.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Senha"

[node name="Registrar_F" type="Button" parent="Background"]
margin_left = 1440.0
margin_top = 880.0
margin_right = 1840.0
margin_bottom = 960.0
custom_fonts/font = ExtResource( 1 )
text = "Registrar"

[node name="messageError" type="Label" parent="Background"]
margin_left = 1440.0
margin_top = 800.0
margin_right = 1840.0
margin_bottom = 880.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )

[connection signal="pressed" from="Background/Registrar_F" to="." method="_on_Registrar_F_pressed"]
