[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Sistema/Buttons_Action.gd" type="Script" id=1]
[ext_resource path="res://Fontes/Fontes_Formatadas/insideDropdownAndLineEdit.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fontes/Fontes_Formatadas/BarraSuperior.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fontes/Fontes_Formatadas/Botoes.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fontes/Arial/ariali.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fontes/Arial/arial.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BarraSuperior" type="ColorRect" parent="Background"]
anchor_right = 1.0
margin_bottom = 158.0
color = Color( 0, 0.2, 0.6, 1 )

[node name="Label" type="Label" parent="Background/BarraSuperior"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Registrar Paciente"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="Background"]
margin_left = 480.0
margin_top = 440.0
margin_right = 1440.0
margin_bottom = 575.0
custom_fonts/font = ExtResource( 2 )

[node name="Label" type="Label" parent="Background/LineEdit"]
margin_left = 4.0
margin_top = -66.0
margin_right = 150.0
margin_bottom = -6.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nome"

[node name="Registrar_P" type="Button" parent="Background"]
margin_left = 1440.0
margin_top = 880.0
margin_right = 1840.0
margin_bottom = 960.0
custom_fonts/font = ExtResource( 4 )
text = "Registrar"

[node name="HTTPRequest_RP" type="HTTPRequest" parent="."]

[node name="messageError" type="Label" parent="."]
margin_left = 1440.0
margin_top = 800.0
margin_right = 1840.0
margin_bottom = 880.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )

[connection signal="pressed" from="Background/Registrar_P" to="." method="_on_Registrar_P_pressed"]
[connection signal="request_completed" from="HTTPRequest_RP" to="." method="_on_HTTPRequest_RP_request_completed"]
